# axiom-core

./: .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  build.rs
benches/: cas-benchmark.rs  chunker-benchmark.rs  poc_benchmark.rs  working_tree_bench.rs
proto/: sync.proto
src/: cas.rs  checkout.rs  chunker.rs  commit.rs  diff_engine.rs  error.rs  lib.rs  main.rs  merkle.rs  namespace.rs  version.rs  working_tree.rs
src/api/: api_index.html  dto.rs  error.rs  mod.rs  state.rs
src/api/routes/: diff.rs  download.rs  health.rs  helpers.rs  mod.rs  objects.rs  refs.rs  upload.rs  versions.rs  workspaces.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  rbac.rs
src/gc/: lifecycle.rs  mod.rs  recycle_bin.rs  refcount.rs  scheduler.rs  sweep.rs
src/model/: chunk.rs  diff.rs  hash.rs  mod.rs  node.rs  refs.rs  tree.rs  version.rs
src/store/: cache.rs  factory.rs  fdb.rs  memory.rs  mod.rs  rocksdb.rs  s3.rs  sqlite.rs  traits.rs
src/sync/: bloom_negotiate.rs  client_auth.rs  clone_client.rs  fast_forward.rs  mod.rs  pack.rs  parallel.rs  pull_client.rs  pull_server.rs  push_client.rs  push_server.rs  reachable.rs  remote.rs  remote_refs.rs  resume.rs  session.rs  shallow.rs
src/telemetry/: mod.rs
src/tenant/: mod.rs  model.rs  repo.rs
tests/: api_tests.rs  auth_tests.rs  checkout_tests.rs  chunker_tests.rs  cloud_store_tests.rs  commit_tests.rs  diff_engine_tests.rs  download_tests.rs  e2e_tests.rs  fast_forward_tests.rs  merkle_tests.rs  model_tests.rs  namespace_tests.rs  observability_api_tests.rs  pack_tests.rs  query_tests.rs  reachable_tests.rs  remote_refs_tests.rs  remote_tests.rs  rocksdb_tests.rs  sqlite_tests.rs  sync_session_tests.rs  sync_store_tests.rs  sync_tests.rs  trusted_gateway_auth_tests.rs  upload_tests.rs  working_tree_tests.rs  workspace_api_tests.rs  workspace_member_api_tests.rs
