[package]
name = "axiom-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["local"]
local = ["dep:rocksdb", "dep:rusqlite"]
cloud = []
full = ["local", "cloud"]

[dependencies]
thiserror = "2.0.18"
blake3 = { version = "1.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
criterion = "0.8.2"
rocksdb = { version = "0.22", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
fastcdc = "3"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
base64 = "0.22"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"

[[bench]]
name = "cas-benchmark"
harness = false

[[bench]]
name = "poc_benchmark"
harness = false
