[package]
name = "axiom-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["local"]
local = ["dep:rocksdb", "dep:rusqlite"]
cloud = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:zstd", "dep:aws-sdk-s3", "dep:aws-config", "dep:aws-credential-types", "dep:md-5", "dep:bytes"]
# FoundationDB backend — requires the FDB client library to be installed.
# brew install foundationdb  (macOS) or the package for your distro.
fdb = ["dep:foundationdb"]
full = ["local", "cloud"]

[dependencies]
thiserror = "2.0.18"
blake3 = { version = "1.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
criterion = "0.8.2"
rocksdb = { version = "0.22", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
fastcdc = "3"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
base64 = "0.22"
walkdir = "2"
ignore = "0.4"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
zstd = { version = "0.13", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
md-5 = { version = "0.10", optional = true }
bytes = { version = "1", optional = true }
foundationdb = { version = "0.9", features = ["embedded-fdb-include"], optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }

[[bench]]
name = "cas-benchmark"
harness = false

[[bench]]
name = "poc_benchmark"
harness = false

[[bench]]
name = "working_tree_bench"
harness = false
